fix(accordion): improved chevron icon alignment to be vertically centered

--- a/src/components/accordion/base.css
+++ b/src/components/accordion/base.css
@@ -56,7 +56,7 @@
         height: .425rem;
         position: absolute;
         inset-inline-end: 0.5rem;
-        margin-block-start: 0.5rem;
+        margin-block-start: 0.313rem;
         transform: translateY(-50%) rotate(45deg);
       }
     }
